[package]
name = "abc"
version = "0.1.0"
edition = "2021"

[features]
default = []
## @@protoc_insertion_point(features)

[dependencies]
bytes = "1.1.0"
prost = "0.13.1"
pbjson = "0.7"
pbjson-types = "0.7"
serde = "1.0"
tonic = { version = "0.12.2", features = ["tls", "transport"] }
http = "1.1.0"


[workspace]